--- a/auth-api/Jenkinsfile
+++ b/auth-api/Jenkinsfile
@@ -1,64 +1,71 @@
-// auth-api/Jenkinsfile
 pipeline {
-    agent {
-        // Usa un agente de Jenkins que tenga Go instalado
-        docker { image 'golang:1.19' }
-    }
+    agent any
 
     environment {
         IMAGE_NAME = "auth-api"
-        DOCKER_REGISTRY = "tu-usuario-docker"
     }
 
     stages {
-        stage('Detectar Cambios') {
-            when { changeset "auth-api/**" }
+        stage('Checkout') {
             steps {
-                echo "Cambios detectados en el auth-api. Continuando..."
+                checkout scm
+                echo "Procesando cambios en el directorio auth-api"
             }
         }
 
-        stage('Descargar Dependencias y Probar') {
-            steps {
-                // Descarga las dependencias del módulo de Go
-                sh 'go mod download'
-                sh 'go test ./...'
+        stage('Build & Test') {
+            agent {
+                docker { image 'golang:1.19' }
             }
-        }
-
-        stage('Construir Binario') {
             steps {
-                // Compila la aplicación de Go. CGO_ENABLED=0 es para compilación estática
-                sh 'CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o main .'
-            }
-        }
-
-        stage('Construir Imagen Docker') {
-            steps {
-                sh "docker build -t ${IMAGE_NAME}:${env.GIT_COMMIT.substring(0,7)} ."
-                sh "docker tag ${IMAGE_NAME}:${env.GIT_COMMIT.substring(0,7)} ${DOCKER_REGISTRY}/${IMAGE_NAME}:latest-${env.BRANCH_NAME}"
-            }
-        }
-
-        stage('Publicar Imagen Docker') {
-            steps {
-                withCredentials([usernamePassword(credentialsId: 'dockerhub-credentials', usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS')]) {
-                    sh "echo ${DOCKER_PASS} | docker login -u ${DOCKER_USER} --password-stdin"
-                    sh "docker push ${DOCKER_REGISTRY}/${IMAGE_NAME}:latest-${env.BRANCH_NAME}"
+                dir('auth-api') {
+                    sh 'go mod download'
+                    sh 'go test ./...'
+                    sh 'CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o auth-api .'
                 }
             }
         }
+
+        stage('Build Docker Image') {
+            steps {
+                dir('auth-api') {
+                    script {
+                        def shortCommit = env.GIT_COMMIT.substring(0,7)
+                        def imageTag = "latest-${env.BRANCH_NAME}"
+                        
+                        def customImage = docker.build("${IMAGE_NAME}:${shortCommit}", ".")
+                        
+                        customImage.tag("${env.DOCKER_REGISTRY_USER}/${IMAGE_NAME}:${imageTag}")
+                        
+                        env.FINAL_IMAGE_TAG = imageTag
+                    }
+                }
+            }
+        }
+
+        stage('Push Docker Image') {
+            steps {
+                docker.withRegistry("https://registry.hub.docker.com", 'dockerhub-credentials') {
+                    docker.image("${env.DOCKER_REGISTRY_USER}/${IMAGE_NAME}:${env.FINAL_IMAGE_TAG}").push()
+                }
+                echo "Imagen publicada: ${env.DOCKER_REGISTRY_USER}/${IMAGE_NAME}:${env.FINAL_IMAGE_TAG}"
+            }
+        }
     }
+
     post {
         success {
-            if (env.BRANCH_NAME == 'main') {
+            if (env.BRANCH_NAME == 'main' || env.BRANCH_NAME == 'master') {
                 echo "Disparando el pipeline de integración..."
-                build job: 'integration-pipeline',
+                build job: 'microservices-integration/master',
                       parameters: [
                           string(name: 'TRIGGERING_SERVICE', value: "${IMAGE_NAME}"),
-                          string(name: 'IMAGE_TAG', value: "latest-main")
+                          string(name: 'IMAGE_TAG', value: "${env.FINAL_IMAGE_TAG}")
                       ]
             }
+        }
+        always {
+            cleanWs()
         }
     }
 }
