--- a/frontend/Jenkinsfile
+++ b/frontend/Jenkinsfile
@@ -4,56 +4,88 @@ pipeline {
     environment {
         IMAGE_NAME = "frontend-app"
         DOCKER_REGISTRY = "geoffrey0pv"
+        SERVICE_DIR = "frontend"
     }
 
     stages {
-        stage('Detectar Cambios') {
-            when { changeset "frontend/**" }
+        stage('Checkout') {
             steps {
-                echo "Cambios detectados en el directorio del frontend. Continuando..."
+                checkout scm
+                echo "Procesando cambios en ${IMAGE_NAME}"
             }
         }
 
-        stage('Instalar Dependencias') {
+        stage('Install Dependencies & Build') {
             steps {
-                sh 'npm install'
-            }
-        }
-
-        stage('Construir para Producción') {
-            steps {
-                sh 'npm run build'
-            }
-        }
-
-        stage('Construir Imagen Docker') {
-            steps {
-                sh "docker build -t ${IMAGE_NAME}:${env.GIT_COMMIT.substring(0,7)} ."
-                sh "docker tag ${IMAGE_NAME}:${env.GIT_COMMIT.substring(0,7)} ${DOCKER_REGISTRY}/${IMAGE_NAME}:latest-${env.BRANCH_NAME}"
-            }
-        }
-
-        stage('Publicar Imagen Docker') {
-            steps {
-                withCredentials([usernamePassword(credentialsId: 'dockerhub-credentials', usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS')]) {
-                    sh "echo ${DOCKER_PASS} | docker login -u ${DOCKER_USER} --password-stdin"
-                    sh "docker push ${DOCKER_REGISTRY}/${IMAGE_NAME}:latest-${env.BRANCH_NAME}"
+                dir("${SERVICE_DIR}") {
+                    script {
+                        docker.image('node:8.17.0-alpine').inside {
+                            sh '''
+                                npm install
+                                npm run build
+                            '''
+                        }
+                    }
                 }
             }
         }
-        
+
+        stage('Build Docker Image') {
+            steps {
+                dir("${SERVICE_DIR}") {
+                    script {
+                        def shortCommit = env.GIT_COMMIT.substring(0,7)
+                        def imageTag = "latest-${env.BRANCH_NAME}"
+                        
+                        echo "Construyendo imagen: ${DOCKER_REGISTRY}/${IMAGE_NAME}:${imageTag}"
+                        
+                        def image = docker.build("${DOCKER_REGISTRY}/${IMAGE_NAME}:${shortCommit}")
+                        image.tag(imageTag)
+                        
+                        env.FINAL_IMAGE_TAG = imageTag
+                    }
+                }
+            }
+        }
+
+        stage('Push Docker Image') {
+            steps {
+                script {
+                    docker.withRegistry('', 'dockerhub-credentials') {
+                        docker.image("${DOCKER_REGISTRY}/${IMAGE_NAME}:${env.GIT_COMMIT.substring(0,7)}").push()
+                        docker.image("${DOCKER_REGISTRY}/${IMAGE_NAME}:${env.FINAL_IMAGE_TAG}").push()
+                        
+                        echo "Imagen publicada: ${DOCKER_REGISTRY}/${IMAGE_NAME}:${env.FINAL_IMAGE_TAG}"
+                    }
+                }
+            }
+        }
     }
+        
     post {
         success {
-            // Si el build es en la rama 'main', dispara el pipeline de integración
-            if (env.BRANCH_NAME == 'main') {
-                echo "Disparando el pipeline de integración..."
-                build job: 'integration-pipeline',
-                      parameters: [
-                          string(name: 'TRIGGERING_SERVICE', value: "${IMAGE_NAME}"),
-                          string(name: 'IMAGE_TAG', value: "latest-main")
-                      ]
+            script {
+                if (env.BRANCH_NAME == 'master') {
+                    echo "Disparando el pipeline de integración..."
+                    
+                    try {
+                        build job: 'microservices-integration/master',
+                              parameters: [
+                                  string(name: 'TRIGGERING_SERVICE', value: "${IMAGE_NAME}"),
+                                  string(name: 'IMAGE_TAG', value: "${env.FINAL_IMAGE_TAG}")
+                              ],
+                              wait: false
+                    } catch (Exception e) {
+                        echo "No se pudo disparar el pipeline de integración: ${e.getMessage()}"
+                    }
+                }
             }
+        }
+        always {
+            cleanWs()
+        }
+        failure {
+            echo "Build falló para ${IMAGE_NAME}"
         }
     }
 }
