--- a/auth-api/Jenkinsfile
+++ b/auth-api/Jenkinsfile
@@ -16,7 +16,7 @@ pipeline {
 
         stage('Build & Test') {
             agent {
-                docker { image 'golang:1.19' }
+                docker { image 'golang:1.22-alpine' }
             }
             steps {
                 dir('auth-api') {
