--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # Redis service for message queue
   redis:
@@ -20,12 +18,12 @@ services:
     build:
       context: ./auth-api
       dockerfile: Dockerfile
-    container_name: microservice-auth-api
     ports:
-      - "8000:8000"
+      - "8000"
     environment:
       - AUTH_API_PORT=8000
       - USERS_API_ADDRESS=http://users-api:8083
+      - ZIPKIN_URL=http://zipkin:9411/api/v2/spans
       - JWT_SECRET=PRFT
     depends_on:
       - users-api
@@ -39,13 +37,18 @@ services:
     build:
       context: ./users-api
       dockerfile: Dockerfile
-    container_name: microservice-users-api
     ports:
-      - "8083:8083"
+      - "8083"
     environment:
       - SERVER_PORT=8083
       - JWT_SECRET=PRFT
       - JAVA_OPTS=-Xmx200m -Xms100m
+      - ZIPKIN_URL=http://zipkin:9411/api/v2/spans
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+    depends_on:
+      redis:
+        condition: service_healthy
     networks:
       - microservice-network
     mem_limit: 400m
@@ -57,9 +60,8 @@ services:
     build:
       context: ./todos-api
       dockerfile: Dockerfile
-    container_name: microservice-todos-api
     ports:
-      - "8082:8082"
+      - "8082"
     environment:
       - TODO_API_PORT=8082
       - JWT_SECRET=PRFT
@@ -80,11 +82,11 @@ services:
     build:
       context: ./log-message-processor
       dockerfile: Dockerfile
-    container_name: microservice-log-processor
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
       - REDIS_CHANNEL=log_channel
+      - ZIPKIN_URL=http://zipkin:9411/api/v2/spans
     depends_on:
       redis:
         condition: service_healthy
@@ -97,13 +99,13 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
-    container_name: microservice-frontend
     ports:
-      - "8080:8080"
+      - "8080"
     environment:
       - PORT=8080
       - AUTH_API_ADDRESS=http://auth-api:8000
       - TODOS_API_ADDRESS=http://todos-api:8082
+      - ZIPKIN_URL=http://zipkin:9411
     depends_on:
       - auth-api
       - todos-api
@@ -118,6 +120,28 @@ services:
       - "9411:9411"
     networks:
       - microservice-network
+
+  # API Gateway (Nginx)
+  nginx-gateway:
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile
+    container_name: microservice-nginx-gateway
+    ports:
+      - "80:80"
+      - "8888:80"  # Puerto alternativo para testing
+    environment:
+      - NGINX_HOST=localhost
+      - NGINX_PORT=80
+    depends_on:
+      - auth-api
+      - users-api
+      - todos-api
+      - frontend
+      - zipkin
+    networks:
+      - microservice-network
+    restart: unless-stopped
 
 networks:
   microservice-network:
