feat(redis cache aside): users api using redis for caching users info

--- a/users-api/src/main/resources/application.properties
+++ b/users-api/src/main/resources/application.properties
@@ -2,5 +2,17 @@ jwt.secret=myfancysecret
 server.port=8083
 
 spring.application.name=users-api
-spring.zipkin.baseUrl=http://127.0.0.1:9411/
+spring.zipkin.baseUrl=http://zipkin:9411/
 spring.sleuth.sampler.percentage=100.0
+
+# Redis configuration for Cache-Aside Pattern
+spring.redis.host=${REDIS_HOST:redis}
+spring.redis.port=${REDIS_PORT:6379}
+spring.redis.timeout=60000
+spring.redis.jedis.pool.max-active=8
+spring.redis.jedis.pool.max-wait=-1
+spring.redis.jedis.pool.max-idle=8
+spring.redis.jedis.pool.min-idle=0
+
+# Cache configuration
+cache.user.ttl=3600
