--- a/users-api/pom.xml
+++ b/users-api/pom.xml
@@ -56,6 +56,18 @@
 			<version>1.3.1.RELEASE</version>
 		</dependency>
 
+		<!-- Redis para Cache-Aside Pattern -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+
+		<!-- JSON processing para cache -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
